🔀 [REFACTOR](index.html): Update redirect URL to https://wijndex.com

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://wijndex.com</title>
-<meta http-equiv="refresh" content="0; URL=https://bob.github.io/repo/">
+<meta http-equiv="refresh" content="0; URL=https://wijndex.com">
 <link rel="canonical" href="https://wijndex.com">
